# src/routes/specification.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from 'express';
 
-import createSpecificationsController from '../modules/cars/useCases/createSpecification';
+import CreateSpecificationController from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationRoutes = Router();
 
-specificationRoutes.post('/', (request, response) => {
-  return createSpecificationsController.handle(request, response);
-});
+const createSpecificationsController = new CreateSpecificationController();
+
+specificationRoutes.post('/', createSpecificationsController.handle);
 
 export default specificationRoutes;
